Fix social images

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,10 +13,10 @@
   <meta name="twitter:site" content="@{{ site.twitter_username }}">
   <meta name="twitter:title" content="{{ site.title }}">
   <meta name="twitter:description" content="{{ site.description }}">
-  <meta name="twitter:image" content="{{ site.url }}/images/libsql-square-large.jpg">
+  <meta name="twitter:image" content="{{ site.url }}/images/libsql-square-large.png">
   <meta name="twitter:image:alt" content="{{ site.title }}">
 
-  <meta property="og:image:url" content="{{ site.url }}/images/libsql-1200x630.jpg">
+  <meta property="og:image:url" content="{{ site.url }}/images/libsql-1200x630.png">
   <meta property="og:image:alt" content="{{ site.title }}">
 
   <link rel="manifest" href="/manifest.webmanifest">
